--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Nathan Asbury</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
-            
+          Welcome to my Site
         </header>
 
         <!--==================== MAIN ====================-->
