--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
             padding: 0 20px;
         }
         .banner {
-            width: 100%;
-            height: 200px; /* Adjust as needed */
-            background-color: #f0f0f0; /* Placeholder color */
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-image: url('banner.jpg'); /* Add your image URL here */
+    background-size: cover; /* Cover the entire div */
+    background-position: center; /* Center the background image */
+    color: white; /* Text color */
+    text-align: center; /* Align text to the center */
+    padding: 50px 0; /* Add some padding */
         }
         .banner h1 {
             font-size: 2.5rem;
@@ -45,7 +44,7 @@
 <body>
     <!-- BANNER -->
     <div class="banner">
-        <h1>Welcome to Nathan Asbury's Portfolio</h1>
+        <h1>Nathan Asbury</h1>
     </div>
 
     <!-- HEADER -->
