--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             padding: 0 20px;
         }
         .banner {
-            background-image: url('banner.jpg'); /* Add your image URL here */
+            background-image: url('assets/img/banner.jpg'); /* Add your image URL here */
     background-size: cover; /* Cover the entire div */
     background-position: center; /* Center the background image */
     color: white; /* Text color */
